# SNOPLUS

documents/: pb_delivery.tex
documents/pb_delivery/: pb_delivery.tex
g4scout/: CMakeCache.txt  CMakeLists.txt  GNUmakefile  Makefile  README  Scout  Scout.cc  cmake_install.cmake  scout.cc
g4scout/include/: ScoutDetectorConstruction.h  ScoutDetectorConstruction.hh  ScoutDetectorMaterial.ihh  ScoutDetectorMessenger.hh  ScoutEventAction.hh  ScoutEventActionMessenger.hh  ScoutParticleSource.hh  ScoutParticleSourceMessenger.hh  ScoutPmtHit.hh  ScoutPmtSD.hh  ScoutPrimaryGeneratorAction.hh  ScoutRunAction.hh  ScoutRunActionMessenger.hh  ScoutScintHit.hh  ScoutScintSD.hh  ScoutStackingAction.wtf
g4scout/macros/: alpha.mac
g4scout/src/: ScoutDetectorConstruction.cc  ScoutDetectorConstruction.cc~  ScoutDetectorMaterial.icc  ScoutDetectorMessenger.cc  ScoutEventAction.cc  ScoutEventActionMessenger.cc  ScoutParticleSource.cc  ScoutParticleSourceMessenger.cc  ScoutPmtHit.cc  ScoutPmtSD.cc  ScoutPrimaryGeneratorAction.cc  ScoutRootEvent.hh  ScoutRunAction.cc  ScoutRunActionMessenger.cc  ScoutScintHit.cc  ScoutScintSD.cc  ScoutStackingAction.wtf  WCSimPhysicsList.cc
radioisotopes/: 110mAg_crosssection.xpm  110mAg_crosssection_grey.txt  60Co_crosssection_grey.txt  flux_average.py  n_flux_grey.txt  snake.py
scoutdigitizer/: Makefile  ScoutDigitizer  ScoutDigitizer.cpp
scoutdigitizer/include/: Digitizer.h  H5Reader.h  H5Writer.h
scoutdigitizer/src/: Digitizer.cc  H5Reader.cc  H5Writer.cc
